Thu Jun 10 08:40:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tao/orbsvcs/tests/Bug_2137_Regression/client.cpp
          Corrected const char * problem.

Thu Jun  9 18:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Tagged_Components.h:
          Removed commented out code

Thu Jun  9 18:44:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ServicesS_T.h:
          Removed this file, was not included at all

Thu Jun  9 18:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FaultTolerance/ChangeLog:
          Removed this file, we have a main changelog

        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientPolicy_i.cpp:
        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientRequest_Interceptor.cpp:
        * orbsvcs/orbsvcs/FaultTolerance/FT_Invocation_Endpoint_Selectors.cpp:
        * orbsvcs/orbsvcs/FaultTolerance/FT_Policy_i.cpp:
        * orbsvcs/orbsvcs/FaultTolerance/FT_ServerRequest_Interceptor.cpp:
          Minor formatting issues. Fixes bugzilla bug 2139. Thanks to
          <jmegq at radiance dot com>

Thu Jun  9 18:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/Reference_Counting/*
          New reference counting test, regression for bug 2142.
          Thanks to Frank Pilhofer <fp@mc.com>

Thu Jun  9 15:33:52 2005  Simon McQueen  <sm@prismtech.com>

        * TAO_IDL/be/be_visitor_union_branch/public_ci.cpp:

          Change valuetype acessor declaration to return a pointer
          rather than a _ptr.

          This fixes bugzilla #2144.

        * tests/Bug_2144_Regression/Bug_2144_Regression.mpc:
        * tests/Bug_2144_Regression/README:
        * tests/Bug_2144_Regression/test.cpp:
        * tests/Bug_2144_Regression/test.idl:

          Regression test for the above.

Thu Jun  9 07:24:15 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Log/EventLogConsumer.cpp (push):
	* orbsvcs/orbsvcs/Log/NotifyLogConsumer.cpp (push):