@@ -1,6 +1,16 @@
+Fri Jun 10 10:15:17 2005  Simon McQueen  <sm@prismtech.com>
+
+        * tests/Bug_2144_Regression/Bug_2144_Regression.mpc:
+
+          Add valuetype to dependencies to (hopefully) fix Linux error.
+
+        * tao/Profile.cpp:
+
+          Fix warning on Linux.
+
 Thu Jun 10 08:40:00 UTC 2005  Simon Massey  <sma@prismtech.com>
 
-        * tao/orbsvcs/tests/Bug_2137_Regression/client.cpp
+        * tao/orbsvcs/tests/Bug_2137_Regression/client.cpp:
           Corrected const char * problem.
 
 Thu Jun  9 18:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
